--- a/index.html
+++ b/index.html
@@ -17,38 +17,123 @@
     <!-- ---------------------------------------------
                   Nav-Items
     ---------------------------------------------- -->
-    <section class="container">
-        <nav class="navbar navbar-expand-lg bg-light">
-            <div class="container">
-                <a class="navbar-brand" href="#"><img src="./images/logo.png" alt=""></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Shoes</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Backpack</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Subscribe</a>
-                        </li>
+    <header>
+        <section class="container">
+            <nav class="navbar navbar-expand-lg bg-light">
+                <div class="container">
+                    <a class="navbar-brand" href="#"><img src="./images/logo.png" alt=""></a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Shoes</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Backpack</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Subscribe</a>
+                            </li>
 
-                    </ul>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+        </section>
+        <!-- --------------header-end------------- -->
+        <section>
+            <div class="container">
+                <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active my-5" style="background-color:#fceae8">
+                            <div class="row">
+                                <div class="col-lg-7 d-flex align-items-center ">
+                                    <div class="ms-5">
+                                        <h1>Cool Dude Headphone</h1>
+                                        <p>This is the best headphone in the world for people who just want to waste
+                                            time in
+                                            front of funky world.</p>
+                                        <h1>$420</h1>
+                                        <div class="btn" style="background-color: #e83e8c;">
+                                            <button class="border-0 text-white" style="background-color:#e83e8c ;">By
+                                                Now</button>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-lg-5">
+                                    <img src="./images/banner-images/headphone.png" alt="" class="img-fluid">
+                                </div>
+                            </div>
+                        </div>
+                        <!-- carousel-item-2nd-->
+                        <div class="carousel-item my-5" style="background-color:#fceae8">
+                            <div class="row">
+                                <div class="col-lg-7 d-flex align-items-center ">
+                                    <div class="ms-5">
+                                        <h1>Cool Dude Headphone</h1>
+                                        <p>This is the best headphone in the world for people who just want to waste
+                                            time in
+                                            front of funky world.</p>
+                                        <h1>$420</h1>
+                                        <div class="btn" style="background-color: #e83e8c;">
+                                            <button class="border-0 text-white" style="background-color:#e83e8c ;">By
+                                                Now</button>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-lg-5">
+                                    <img src="./images/banner-images/tv.png" alt="" class="img-fluid">
+                                </div>
+                            </div>
+                        </div>
+                        <!-- carousel-item-3rd -->
+                        <div class="carousel-item my-5" style="background-color:#fceae8">
+                            <div class="row">
+                                <div class="col-lg-7 d-flex align-items-center ">
+                                    <div class="ms-5">
+                                        <h1>Cool Dude Headphone</h1>
+                                        <p>This is the best headphone in the world for people who just want to waste
+                                            time in
+                                            front of funky world.</p>
+                                        <h1>$420</h1>
+                                        <div class="btn" style="background-color: #e83e8c;">
+                                            <button class="border-0 text-white" style="background-color:#e83e8c ;">By
+                                                Now</button>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-lg-5">
+                                    <img src="./images/banner-images/xbox.png" alt="" class="img-fluid">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
                 </div>
             </div>
-        </nav>
-    </section>
-    <!-- --------------------------------------
-               end 
- -------------------------------------- -->
+        </section>
+    </header>
+    <!-- -------------------end-header-section----------------- -->
+
+    <!-- ---------------------------------------------------
+                  cetafory-sectipon
+    --------------------------------------------------- -->
 
 
 
