--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <div class="container">
                 <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
-                        <div class="carousel-item active my-5" style="background-color:#fceae8">
+                        <div class="carousel-item active my-5 rounded-3" style="background-color:#fceae8">
                             <div class="row">
                                 <div class="col-lg-7 d-flex align-items-center ">
                                     <div class="ms-5">
@@ -135,7 +135,119 @@
                   cetafory-sectipon
     --------------------------------------------------- -->
 
+    <main>
+        <section>
+            <div class="container overflow-hidden text-center">
+                <div class="row gy-4 my-5">
+                    <!-- catagory-1 -->
+                    <div class="col-lg-4 col-md-6">
+                        <div class=" bg-warning rounded-3">
+                            <div class="row">
+                                <div class="d-flex justify-content-around  align-items-center">
+                                    <div class="col-md-6">
+                                        <h1 class="text-white">Watch</h1>
+                                    </div>
+                                    <div class="col-md-6">
+                                        <img src="./images/categories/watch.png" alt="">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- catagory-2 -->
+                    <div class="col-lg-4 col-md-6">
+                        <div class="border rounded-3" style="background-color: #e83e8c;">
+                            <div class="row">
+                                <div class="d-flex justify-content-around   align-items-center">
+                                    <div class="col-md-6">
+                                        <h1 class="text-white">Bag</h1>
+                                    </div>
+                                    <div class="col-md-6">
+                                        <img src="./images/categories/bag.png" alt="">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- catagory-3 -->
+                    <div class="col-lg-4 col-md-6">
+                        <div class="border rounded-3 bg-primary">
+                            <div class="row">
+                                <div class="d-flex justify-content-around align-items-center ">
+                                    <div class="col-md-6">
+                                        <h1 class="text-white">Shoes</h1>
+                                    </div>
+                                    <div class="col-md-6">
+                                        <img src="./images/categories/shoes.png" alt="">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- -----------------card-section------------------ -->
 
+        <section>
+            <div class="container">
+                <h2 class="mt-5">Shoes</h2>
+                <div class="row row-cols-1 row-cols-md-3 g-4 ">
+                    <div class="col">
+                        <div class="card h-100 shadow-lg">
+                            <img src="./images/shoes/shoe-1.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Supply 350</h5>
+                                <p class="card-text">This is a longer card with supporting text below as a natural
+                                    lead-in to additional.</p>
+                                <h3>$120</h3>
+                            </div>
+                            <div class="m-3">
+                                <button class="text-white  border-0 rounded-3 px-4 py-2"
+                                    style="background-color:#f1338c">Buy Now
+                                    >></button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card h-100 shadow-lg">
+                            <img src="./images/shoes/shoe-2.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Nike 360</h5>
+                                <p class="card-text">This card has supporting text below as a natural lead-in to
+                                    additional content.</p>
+                                <h3>$320</h3>
+                            </div>
+                            <div class="m-3">
+                                <button class="text-white  border-0 rounded-3 px-4 py-2"
+                                    style="background-color:#ee2884">Buy Now
+                                    >></button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card h-100 shadow-lg">
+                            <img src="./images/shoes/shoe-3.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Red Airmax</h5>
+                                <p class="card-text">This is a wider card with supporting text below as a natural
+                                    lead-in to additional.</p>
+                                <h3>$350</h3>
+                            </div>
+                            <div class="m-3">
+                                <button class="text-white  border-0 rounded-3 px-4 py-2"
+                                    style="background-color:#ee2b86">Buy Now
+                                    >></button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- --------------shoes-end----------------- -->
+
+
+    </main>
 
 
 
