added by backpack section

--- a/index.html
+++ b/index.html
@@ -187,14 +187,14 @@
                 </div>
             </div>
         </section>
-        <!-- -----------------card-section------------------ -->
+        <!-- -----------------shoes-section------------------ -->
 
         <section>
             <div class="container">
                 <h2 class="mt-5">Shoes</h2>
                 <div class="row row-cols-1 row-cols-md-3 g-4 ">
                     <div class="col">
-                        <div class="card h-100 shadow-lg">
+                        <div class="card h-100 shadow-lg border-0">
                             <img src="./images/shoes/shoe-1.png" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Supply 350</h5>
@@ -210,7 +210,7 @@
                         </div>
                     </div>
                     <div class="col">
-                        <div class="card h-100 shadow-lg">
+                        <div class="card h-100 shadow-lg border-0">
                             <img src="./images/shoes/shoe-2.png" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Nike 360</h5>
@@ -226,7 +226,7 @@
                         </div>
                     </div>
                     <div class="col">
-                        <div class="card h-100 shadow-lg">
+                        <div class="card h-100 shadow-lg border-0">
                             <img src="./images/shoes/shoe-3.png" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Red Airmax</h5>
@@ -245,8 +245,65 @@
             </div>
         </section>
         <!-- --------------shoes-end----------------- -->
+        <!-- -------------backpack-stat-------------- -->
+        <section class="mt-5">
+            <div class="container">
+                <h2>Backpack</h2>
+                <div class="row row-cols-1 row-cols-md-3 g-4">
+                    <div class="col">
+                        <div class="card h-100 shadow-lg  border-0">
+                            <img src="./images/bags/bag-1.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Red Laltu Bag</h5>
+                                <h3>$120</h3>
+                                <p class="card-text">This is a wider card with supporting text below as a natural
+                                    lead-in to additional content. This content is a little bit longer.</p>
+                            </div>
+                            <div class="m-3">
+                                <button class="text-white  border-0 rounded-3 px-4 py-2"
+                                    style="background-color:#f1338c">Buy Now
+                                    >></button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card h-100 shadow-lg border-0">
+                            <img src="./images/bags/bag-2.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Nike 360</h5>
+                                <h3>$320</h3>
+                                <p class="card-text">This card has supporting text below as a natural lead-in to
+                                    additional content.</p>
+                            </div>
+                            <div class="m-3">
+                                <button class="text-white  border-0 rounded-3 px-4 py-2"
+                                    style="background-color:#ee2884">Buy Now
+                                    >></button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card h-100 shadow-lg border-0">
+                            <img src="./images/bags/bag-3.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Black Kaltu Bag</h5>
+                                <h3>$169</h3>
+                                <p class="card-text">This is a wider card with supporting text below as a natural
+                                    lead-in to additional content. This card has even longer content than the first to
+                                    show that equal height action.</p>
 
-
+                            </div>
+                            <div class="m-3">
+                                <button class="text-white  border-0 rounded-3 px-4 py-2"
+                                    style="background-color:#ee2b86">Buy Now
+                                    >></button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- ------------backpack-end--------------- -->
     </main>
 
 
