--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
         </section>
         <!-- --------------shoes-end----------------- -->
         <!-- -------------backpack-stat-------------- -->
-        <section class="mt-5">
+        <section class="mt-5 mb-5">
             <div class="container">
                 <h2>Backpack</h2>
                 <div class="row row-cols-1 row-cols-md-3 g-4">
@@ -303,10 +303,23 @@
                 </div>
             </div>
         </section>
-        <!-- ------------backpack-end--------------- -->
     </main>
-
-
+    <!-- ------------backpack-end--------------- -->
+    <!-- -----------------subscribe-start------------- -->
+    <section style="height: 300px;" class="container footer-section d-flex justify-content-center align-items-center">
+        <div>
+            <h2>LET'S STAY IN TOUCH</h2>
+            <p>Get updates on sales, specials and more</p>
+            <form>
+                <div class=" mb-1">
+                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                </div>
+                <button type="submit" class="border-0 px-4 py-2 rounded-3 text-white"
+                    style="background-color:#ee2b86;">Submit</button>
+            </form>
+        </div>
+    </section>
+    <!-- -----------------subscribe-start------------- -->
 
     <script src="./Bootstrap/bootstrap.bundle.min.js"></script>
 </body>
